<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cleaning"
            android:icon="@drawable/ic_tab_cleaning"
            android:title="@string/tab_cleaning" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_tab_calendar"
            android:title="@string/tab_calendar" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_tab_wallet"
            android:title="@string/tab_wallet" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_tab_shopping_list"
            android:title="@string/tab_shopping_list" />
    </group>
</menu>
