<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_cleaning">

    <fragment
        android:id="@+id/nav_cleaning"
        android:name="de.sowrong.together.ui.cleaning.CleaningFragment"
        android:label="@string/tab_cleaning"
        tools:layout="@layout/fragment_tasks_cleaning">
    </fragment>

    <fragment
        android:id="@+id/nav_calendar"
        android:name="de.sowrong.together.ui.calendar.CalendarFragment"
        android:label="@string/tab_calendar"
        tools:layout="@layout/fragment_tasks_calendar">
    </fragment>

    <fragment
        android:id="@+id/nav_wallet"
        android:name="de.sowrong.together.ui.wallet.WalletFragment"
        android:label="@string/tab_wallet"
        tools:layout="@layout/fragment_tasks_wallet">
    </fragment>

    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="de.sowrong.together.ui.shoppingList.ShoppingListFragment"
        android:label="@string/tab_shopping_list"
        tools:layout="@layout/fragment_tasks_shopping_list">
    </fragment>
</navigation>